--- a/CountSecondsInTime/CountSecondsInTime.vcxproj
+++ b/CountSecondsInTime/CountSecondsInTime.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CountSecondsInTime.cpp" />
+    <ClCompile Include="readme.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
