--- a/SportWorldRecordFunctions/SportWorldRecordFunctions.vcxproj
+++ b/SportWorldRecordFunctions/SportWorldRecordFunctions.vcxproj
@@ -130,6 +130,9 @@
   <ItemGroup>
     <ClCompile Include="SportWorldRecord.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
