--- a/2D Array problem/2D Array problem.vcxproj
+++ b/2D Array problem/2D Array problem.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{2251b285-a388-4c44-b8b9-9688bcfc7ba5}</ProjectGuid>
     <RootNamespace>My2DArrayproblem</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>2D Array</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
