--- a/2D Array problem/2D Array problem.vcxproj
+++ b/2D Array problem/2D Array problem.vcxproj
@@ -128,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2D Array problem.cpp" />
+    <ClCompile Include="2D Arrays.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
