Computer Lab usage stats

--- a/FiveComputer's/FiveComputer's.vcxproj.filters
+++ b/FiveComputer's/FiveComputer's.vcxproj.filters
@@ -15,8 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="FiveComputer%27s.cpp">
+    <ClCompile Include="FiveComputers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ReadMe.md" />
   </ItemGroup>
 </Project>
