--- a/FiveComputer's/FiveComputer's.vcxproj
+++ b/FiveComputer's/FiveComputer's.vcxproj
@@ -127,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FiveComputer%27s.cpp" />
+    <ClCompile Include="FiveComputers.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ReadMe.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
