--- a/FiveComputer's/FiveComputer's.vcxproj.filters
+++ b/FiveComputer's/FiveComputer's.vcxproj.filters
@@ -22,4 +22,9 @@
   <ItemGroup>
     <None Include="ReadMe.md" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FiveComputers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
