--- a/FiveComputer's/FiveComputer's.vcxproj
+++ b/FiveComputer's/FiveComputer's.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{2c30c4a9-03ef-45f4-824f-bb03b1819609}</ProjectGuid>
     <RootNamespace>FiveComputers</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>FiveComputers</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -131,6 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FiveComputers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
