--- a/Password-example/Password-example.vcxproj.filters
+++ b/Password-example/Password-example.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Password-example.cpp">
+    <ClCompile Include="PasswordExample.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
