--- a/Password-example/Password-example.vcxproj
+++ b/Password-example/Password-example.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{54f0bdda-5253-4ee7-baef-59c9e5ece3e6}</ProjectGuid>
     <RootNamespace>Passwordexample</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>PasswordExample</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
