--- a/FunctionsGroupProject/FunctionsGroupProject.vcxproj.filters
+++ b/FunctionsGroupProject/FunctionsGroupProject.vcxproj.filters
@@ -20,8 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\Downloads\SP ProjSpec (1).pdf">
-      <Filter>Source Files</Filter>
-    </None>
+    <None Include="readme.md" />
+    <None Include="development-notes.md" />
   </ItemGroup>
 </Project>
