Revert "postageCost changed name"
This reverts commit 7f0b94597ec89a9613640f0a02a7c6db92d89ecd.

--- a/FInal-Exam/FInal-Exam.vcxproj
+++ b/FInal-Exam/FInal-Exam.vcxproj
@@ -128,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="postageCost.cpp" />
+    <ClCompile Include="FInal-Exam.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
