--- a/postageCost/postageCost.vcxproj
+++ b/postageCost/postageCost.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7f93a3ae-881e-42aa-8f9a-ee8fbd41c89a}</ProjectGuid>
-    <RootNamespace>FInalExam</RootNamespace>
+    <ProjectGuid>{72111cf5-5756-472f-8951-0d3ea617275a}</ProjectGuid>
+    <RootNamespace>postageCost</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>postageCost</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FInal-Exam.cpp" />
+    <ClCompile Include="postageCost.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
